<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ibm.wala</groupId>
  <artifactId>ml</artifactId>
  <version>0.23.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>com.ibm.wala.cast.python</module>
    <module>com.ibm.wala.cast.python.jython</module>
    <module>com.ibm.wala.cast.python.jython3</module>
    <module>com.ibm.wala.cast.python.test</module>
    <module>com.ibm.wala.cast.python.jython.test</module>
    <module>com.ibm.wala.cast.python.jython3.test</module>
    <module>com.ibm.wala.cast.python.ml</module>
    <module>com.ibm.wala.cast.python.ml.test</module>
  </modules>
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub ponder-lab Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/ponder-lab/ML</url>
    </repository>
  </distributionManagement>
  <properties>
    <project-version>0.0.1-SNAPSHOT</project-version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.version>3.10.1</maven.compiler.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <build-alias>b000</build-alias>
    <wala.version>1.6.0</wala.version>
    <spotless.version>2.37.0</spotless.version>
    <maven.surefire.version>3.0.0-M7</maven.surefire.version>
    <logging.config.file>${maven.multiModuleProjectDirectory}/logging.properties</logging.config.file>
    <black.version>24.1.1</black.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.util</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.shrike</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.core</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.cast</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.wala</groupId>
        <artifactId>com.ibm.wala.cast.java</artifactId>
        <version>${wala.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.lsp4j</groupId>
        <artifactId>org.eclipse.lsp4j</artifactId>
        <version>0.8.1</version>
      </dependency>
      <dependency>
        <groupId>commons-cli</groupId>
        <artifactId>commons-cli</artifactId>
        <version>1.3.1</version>
      </dependency>
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20231013</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.1</version>
      </dependency>
      <dependency>
        <groupId>org.python</groupId>
        <artifactId>jython3</artifactId>
        <version>0.0.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.python</groupId>
        <artifactId>jython-slim</artifactId>
        <version>[2.7.3a1-SNAPSHOT,)</version>
      </dependency>
      <dependency>
        <groupId>org.antlr</groupId>
        <artifactId>antlr-runtime</artifactId>
        <version>3.5.3</version>
      </dependency>
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm-all</artifactId>
        <version>5.1</version>
      </dependency>
      <dependency>
        <groupId>com.github.jnr</groupId>
        <artifactId>jnr-constants</artifactId>
        <version>0.9.12</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.15.0</version>
      </dependency>
      <dependency>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-Xlint:deprecation</arg>
              <arg>-Xlint:unchecked</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.version}</version>
          <configuration>
            <parallel>both</parallel>
            <threadCount>1</threadCount>
            <systemPropertyVariables>
              <!-- Set JUL Formatting -->
              <java.util.logging.config.file>${logging.config.file}</java.util.logging.config.file>
            </systemPropertyVariables>
            <forkMode>once</forkMode>
            <argLine>-Dpython.import.site=false</argLine>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <formats>
              <format>
                <includes>
                  <include>**/*.md</include>
                  <include>**/.gitignore</include>
                </includes>
                <trimTrailingWhitespace/>
                <endWithNewline/>
                <indent>
                  <tabs>true</tabs>
                  <spacesPerTab>4</spacesPerTab>
                </indent>
              </format>
              <format>
                <includes>
                  <include>**/*.xml</include>
                </includes>
                <excludes>
                  <exclude>**/plugin.xml</exclude>
                  <exclude>**/pom.xml</exclude>
                  <exclude>**/dependency-reduced-pom.xml</exclude>
                  <exclude>**/gradle.xml</exclude>
                  <exclude>**/target/</exclude>
                </excludes>
                <eclipseWtp>
                  <type>XML</type>
                  <files>
                    <file>${maven.multiModuleProjectDirectory}/spotless.xml.prefs</file>
                  </files>
                </eclipseWtp>
                <trimTrailingWhitespace/>
                <endWithNewline/>
              </format>
            </formats>
            <java>
              <googleJavaFormat>
                <version>1.17.0</version>
                <reflowLongStrings>true</reflowLongStrings>
              </googleJavaFormat>
            </java>
            <pom>
              <sortPom>
                <expandEmptyElements>false</expandEmptyElements>
              </sortPom>
            </pom>
            <python>
              <includes>
                <!-- This is where the TF 2 data is. The other directories have Python 2 files, which are not supported by later versions of black. -->
                <include>com.ibm.wala.cast.python.test/data/**/*.py</include>
              </includes>
              <excludes>
                <!-- This file uses Python 2, which isn't supported by later versions of black. -->
                <exclude>com.ibm.wala.cast.python.test/data/ret.py</exclude>
              </excludes>
              <black>
                <version>${black.version}</version>
              </black>
            </python>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven.surefire.version}</version>
      </plugin>
    </plugins>
  </reporting>
</project>
